continuing code development

--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-  "name": "constructor-word-guess",
+  "name": "node-word-guess",
   "version": "1.0.0",
-  "description": "Unit 11 JavaScript Assignment - Word Guess Game",
-  "main": "index.js",
+  "description": "Node Hangman game",
+  "main": "hangman.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BillySterling/constructor-word-guess.git"
-  },
-  "keywords": [
-    "JavaScript",
-    "constructor",
-    "CLI"
-  ],
   "author": "Billy Sterling",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BillySterling/constructor-word-guess/issues"
-  },
-  "homepage": "https://github.com/BillySterling/constructor-word-guess#readme"
+  "dependencies": {
+    "inquirer": "^6.2.2"
+  }
 }
